# ics-opc-ua-alerter

./: .gitignore  README.md  Vagrantfile  pyproject.toml  requirements.txt
opc_ua/: client.py  constants.py  logger.py  server.py
opcua/: client.py  constants.py  logger.py  server.py
suricata/: suricata.yaml
suricata/rules/: opcua.rules
